add GitHub Actions CI and Render deployment blueprint